force-app/main/default/objects/Contract/fields/EarliestCancellationDate__c.field-meta.xml
<CustomField>
    <fullName>EarliestCancellationDate__c</fullName>
    <formula>IF(vlocity_cmt__TerminateDate__c &lt;= PlusNet_Latest_Cancellation_Date__c, PlusNet_End_Of_Minimum_Contract_Term__c, ADDMONTHS(TODAY(),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frühestes Vertragsenddatum</label>
    <type>Date</type>
</CustomField>