force-app/main/default/objects/Contract/fields/OriginalStartDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalStartDate__c</fullName>
    <label>Ursprüngliches Startdatum</label>
    <type>Date</type>
</CustomField>