force-app/main/default/objects/Contract/fields/PartnerContractID__c.field-meta.xml
<CustomField>
    <fullName>PartnerContractID__c</fullName>
    <label>Partnervertrags-ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>