force-app/main/default/objects/Contract/fields/PlusNet_End_Of_Minimum_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_End_Of_Minimum_Contract_Term__c</fullName>
    <formula>IF(ISBLANK(ContractTerm), NULL, DATETIMEVALUE(ADDMONTHS(StartDate,ContractTerm) - 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ende Mindestvertragslaufzeit</label>
    <type>Date</type>
</CustomField>