force-app/main/default/objects/Contract/fields/PlusNet_Latest_Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>PlusNet_Latest_Cancellation_Date__c</fullName>
    <label>Spätestes Kündigungsdatum</label>
    <type>Date</type>
</CustomField>