force-app/main/default/objects/Contract/fields/SubDealerID__c.field-meta.xml
<CustomField>
    <fullName>SubDealerID__c</fullName>
    <label>UVP-ID</label>
    <length>14</length>
    <type>Text</type>
</CustomField>