force-app/main/default/objects/Contract/recordTypes/B2B_PreMarketing.recordType-meta.xml
<RecordType>
    <fullName>B2B_PreMarketing</fullName>
    <active>true</active>
    <description>Pre-Marketing</description>
    <label>B2B Vorvermarktung</label>
</RecordType>