force-app/main/default/objects/Contract/recordTypes/B2B_Standard.recordType-meta.xml
<RecordType>
    <fullName>B2B_Standard</fullName>
    <active>true</active>
    <description>Standard</description>
    <label>B2B Standart</label>
</RecordType>