force-app/main/default/objects/Contract/listViews/Alle_aktiven_Vertraege.listView-meta.xml
<ListView>
    <fullName>Alle_aktiven_Vertraege</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>vlocity_cmt__QuoteId__c</columns>
    <columns>vlocity_cmt__OrderId__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>PlusNet_End_Of_Minimum_Contract_Term__c</columns>
    <columns>EarliestCancellationDate__c</columns>
    <columns>vlocity_cmt__OneTimeTotal__c</columns>
    <columns>vlocity_cmt__RecurringTotal__c</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>Alle aktiven Verträge</label>
</ListView>