force-app/main/default/objects/Contract/listViews/Alle_beendeten_Vertraege.listView-meta.xml
<ListView>
    <fullName>Alle_beendeten_Vertraege</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>vlocity_cmt__QuoteId__c</columns>
    <columns>vlocity_cmt__OrderId__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>vlocity_cmt__OneTimeTotal__c</columns>
    <columns>vlocity_cmt__RecurringTotal__c</columns>
    <columns>vlocity_cmt__TerminateDate__c</columns>
    <columns>vlocity_cmt__TerminationType__c</columns>
    <columns>vlocity_cmt__TerminationReason__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Terminated</value>
    </filters>
    <label>Alle beendeten Verträge</label>
</ListView>