force-app/main/default/objects/Contract/listViews/Alle_Vertraege_10_Tage_gekuendigte.listView-meta.xml
<ListView>
    <fullName>Alle_Vertraege_10_Tage_gekuendigte</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>vlocity_cmt__QuoteId__c</columns>
    <columns>vlocity_cmt__OrderId__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>PlusNet_End_Of_Minimum_Contract_Term__c</columns>
    <columns>EarliestCancellationDate__c</columns>
    <columns>vlocity_cmt__TerminateDate__c</columns>
    <columns>vlocity_cmt__TerminationType__c</columns>
    <columns>vlocity_cmt__TerminationReason__c</columns>
    <columns>vlocity_cmt__OneTimeTotal__c</columns>
    <columns>vlocity_cmt__RecurringTotal__c</columns>
    <columns>SubType__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Waiting for construction confirmation,Cancelled</value>
    </filters>
    <label>Alle Verträge &lt; 10 Tage gekündigte</label>
</ListView>