force-app/main/default/objects/Contract/listViews/Alle_Vertraege_offene_Bauentscheidung.listView-meta.xml
<ListView>
    <fullName>Alle_Vertraege_offene_Bauentscheidung</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>vlocity_cmt__QuoteId__c</columns>
    <columns>vlocity_cmt__OrderId__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>vlocity_cmt__OneTimeTotal__c</columns>
    <columns>vlocity_cmt__RecurringTotal__c</columns>
    <columns>SubType__c</columns>
    <columns>CONTRACT.SHIPPING_ZIP</columns>
    <columns>CONTRACT.SHIPPING_CITY</columns>
    <columns>CONTRACT.SHIPPING_STREET</columns>
    <columns>PartnerContractID__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Waiting for construction confirmation</value>
    </filters>
    <label>Alle Verträge offene Bauentscheidung</label>
</ListView>